--- a/base/html/index.html
+++ b/base/html/index.html
@@ -1618,8 +1618,8 @@
                         <tr>
                           <td class="col-num"><!--자동입력--></td>
                           <td class="col-1depth"></td>
-                          <td class="col-2depth">시스템 설정</td>
-                          <td class="col-3depth">영상인식 ROI 설정</td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth"></td>
                           <td class="col-4depth">객체ROI/돌발ROI/교차로ROI</td>
                           <td class="col-5depth"></td>
                           <td class="col-type" data-type=""></td>
@@ -1945,7 +1945,7 @@
                           <td class="col-type" data-type=""></td>
                           <td class="col-url">html/cw/facility_manag.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -1959,7 +1959,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/cw/facility_manag_view.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -1973,7 +1973,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/cw/facility_manag_add.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -1987,7 +1987,7 @@
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/cw/facility_manag_edit.html</td>
                           <!-- <td class="col-date"></td> -->
-                          <td class="col-complete" data-complete=""></td>
+                          <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
                           <td class="col-memo"></td>
                         </tr>
@@ -2126,6 +2126,118 @@
                           <td class="col-5depth"></td>
                           <td class="col-type" data-type=""></td>
                           <td class="col-url">html/cw/cw_check_equipment_list2.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete="완료"></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth">시스템 설정</td>
+                          <td class="col-3depth">영상인식 ROI 설정</td>
+                          <td class="col-4depth">목록</td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type=""></td>
+                          <td class="col-url">html/cw/cw_roiset_list.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete="완료"></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth"></td>
+                          <td class="col-4depth">차량 ROI/보행자 ROI</td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type=""></td>
+                          <td class="col-url">html/cw/cw_roiset_tab.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete=""></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth">영상인식 위경도 설정</td>
+                          <td class="col-4depth">목록</td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type=""></td>
+                          <td class="col-url">html/cw/position_set_list.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete="완료"></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth"></td>
+                          <td class="col-4depth">설정</td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type=""></td>
+                          <td class="col-url">html/cw/position_set.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete=""></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth">시나리오 동작 설정</td>
+                          <td class="col-4depth">목록</td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type=""></td>
+                          <td class="col-url">html/cw/scenario_list.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete="완료"></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth"></td>
+                          <td class="col-4depth">상세</td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type="모달팝업"></td>
+                          <td class="col-url">html/cw/scenario_view.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete="완료"></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth"></td>
+                          <td class="col-4depth">추가</td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type="모달팝업"></td>
+                          <td class="col-url">html/cw/scenario_add.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete="완료"></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth"></td>
+                          <td class="col-4depth">수정</td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type="모달팝업"></td>
+                          <td class="col-url">html/cw/scenario_edit.html</td>
                           <!-- <td class="col-date"></td> -->
                           <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
